# KaoPadTTS

./: README.md  pyproject.toml  requirements.txt  tokenizer.py  tts.py
KaoPadTTS/: __init__.py  codec.py  tokenizer.py  tts.py
KaoPadTTS/text/: dict_transliteration.txt  eng2tha.py  text_normalizer.py
text/: text_normalizer.py
