[project]
name = "KaoPadTTS"
version = "0.1.0"
description = "An 85M-parameter autoregressive Thai TTS model that generates natural speech efficiently, suitable for real-time and low-resource environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub",
    "pythainlp",
    "ssg",
    "soundfile",
    "torch",
    "torchaudio",
    "onnxruntime",
    "git+https://github.com/Aratako/MioCodec"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
